--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<title> Jenkins test website</title>
+<title> Jenkins test website view</title>
 <body>
-This is TestBuild For a new project 
+This is TestBuild For a new project view 
 </body>
 </html>
