--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<title> Jenkins test website view</title>
+<title> Jenkins Dev website</title>
 <body>
-This is TestBuild For a new project view 
+This is DevBuild For a new project  
 </body>
 </html>
